Fix wrap of values on list of key-value pairs

--- a/cmd/playground/static/assets/app.css
+++ b/cmd/playground/static/assets/app.css
@@ -57,7 +57,7 @@ ul, li {
 .wrap-around {
     overflow: hidden;
     white-space: normal;
-    word-break: break-all;
+    overflow-wrap: break-word;
 }
 
 /* pane splitter */
